<resources>
    <string name="app_name">Oqu Toqu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">772824487435-fi319v21snsa3j19u1qtbur2rrheq0a8.apps.googleusercontent.com</string>
    <string name="support_number">77752575991</string>
    <string name="instructions">Enter the DOI of a research paper to find its PDF.\n\n• Prefer articles before 2021\n• If you see \'PDF not found\', try another one\n• 503 errors usually mean overloaded servers</string>
    <string name="hint_doi">Enter DOI or link</string>
    <string name="find_article">🔍 Find Article</string>
    <string name="open_pdf">📄 Open PDF</string>
    <string name="download_pdf">⬇️ Download PDF</string>
    <string name="sample_doi">e.g. 10.1016/j.cag.2021.102111</string>
    <string name="doi_link">DOI Link</string>
    <string name="search_by_doi">🔎 Search by DOI</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_icon">User Icon</string>
    <string name="email_example">your.email@example.com</string>
    <string name="qa">QA</string>
    <string name="what_is_oqu_toqu">What is Oqu Toqu?</string>
    <string name="tech_sup">tech_sup</string>
    <string name="tech_support">Tech Support</string>
    <string name="logout">logout</string>
    <string name="log_out">Log out</string>
    <string name="welcome">Welcome</string>
    <string name="oqu_toqu_research_without_limits">Oqu Toqu – research without limits</string>
    <string name="description">Oqu Toqu is an app that gives researchers worldwide access to articles using Google Scholar and Sci-Hub. It also features an AI-powered summarizer that helps you understand key points in any scientific paper.</string>
    <string name="disclaimer">Disclaimer: Sci-Hub is used strictly for educational and research purposes only</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="sci_hack">Sci Hack</string>
    <string name="profile">Profile</string>
</resources>